--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,4 +10,7 @@
     <string name="success">Успех</string>
 
     <string name="something_is_wrong">Что-то не так</string>
+
+    <string name="your_favour">Ваше любимое</string>
+
 </resources>
