--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="success">Success</string>
 
     <string name="something_is_wrong">Something is wrong</string>
+
+    <string name="your_favour">Top albums</string>
+
 </resources>
