--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="something_is_wrong">Something is wrong</string>
 
     <string name="your_favour">Top albums</string>
+    <string name="top_artists">Top artists</string>
 
 </resources>
